updated ingress (https)

--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -4,11 +4,30 @@ metadata:
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    #nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
+  tls:
+    - hosts:
+        - k8s.nokiacool.ru
+        - www.k8s.nokiacool.ru
+      secretName: k8s-multi-com
   rules:
-    - http:
+    - host: k8s.nokiacool.ru
+      http:
+        paths:
+          - path: /?(.*)
+            backend:
+              serviceName: client-cluster-ip-service
+              servicePort: 3000
+          - path: /api/?(.*)
+            backend:
+              serviceName: server-cluster-ip-service
+              servicePort: 5000
+    - host: www.k8s.nokiacool.ru
+      http:
         paths:
           - path: /?(.*)
             backend:
